--- a/BarmenShop/Views/Shared/_Layout.cshtml
+++ b/BarmenShop/Views/Shared/_Layout.cshtml
@@ -1,8 +1,11 @@
 ﻿@using BarmenShop.Entites
+@using BarmenShop.Services.Interfaces
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<User> _userManager;
+@inject ICategoryService _categoryService;
 @{
     var user = await _userManager.GetUserAsync(User);
+    var categories = await _categoryService.GetAll();
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -28,6 +31,22 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Все товары</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Категории
+                            </a>
+                            <ul class="dropdown-menu text-center">
+                                @foreach(var category in categories)
+                                {
+                                    <li class="nav-item">
+                                        <a class="nav-link dropdown-item" asp-area="" asp-controller="Product" asp-action="Index" asp-route-page="1" asp-route-page="1" asp-route-categoryId=@category.Id>@category.Name</a>
+                                    </li>
+                                }
+                            </ul>
+                        </li>
                         @if(User.Identity.IsAuthenticated)
                         {
                             @if(User.IsInRole("admin"))
@@ -43,13 +62,18 @@
                                 </li>
                             }
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Все товары</a>
-                            </li>
-                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Order" asp-action="Index">Ваши заказы</a>
                             </li>
                         }
                     </ul>
+                    <div class="mx-2">
+                        <div class="input-group rounded">
+                          <input id="search-value" type="search" class="form-control rounded" placeholder="Поиск" aria-label="Search" aria-describedby="search-addon" />
+                          <button class="input-group-text border-0" id="search-addon">
+                            <i class="fas fa-search"></i>
+                          </button>
+                        </div>
+                    </div>
                     <div class="d-flex">
                         @if(User.Identity.IsAuthenticated)
                         {
@@ -74,6 +98,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <div class="w-50 mx-auto notification fixed-top" id="liveAlertPlaceholder"></div>
             @RenderBody()
         </main>
     </div>
@@ -128,7 +153,16 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/notify.js" asp-append-version="true"></script>
+    <script type="text/javascript">
+        $("#search-addon").on("click", function (event) {
+            event.preventDefault();
+            let text = $("#search-value").val();
+            window.location.href=`/Product/FindBy?text=${text}`;
+        });
+    </script>
     <script>
+
         $("#openBasket").on("click", function (event) {
             console.log("buttonPressed");
             const bsOffcanvas = new bootstrap.Offcanvas('#offcanvasRight');
